--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "http-status-codes": "^2.3.0",
     "mongoose": "^8.4.0",
     "redis": "^4.6.14",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "ttypescript": "^1.5.15",
+    "typescript-transform-paths": "^3.4.7"
   }
 }
